# sovri-agent

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml.example
src/: controls.rs  evidence.rs  lib.rs  local_db.rs  main.rs  matrix.rs  report.rs  scan.rs  signed_json.rs
src/scanners/: docker.rs  mod.rs  selftest.rs  ssh.rs  system.rs  user.rs
tests/: docker_r01_effective_posture_acquisition.rs  docker_r02_daemon_version.rs  docker_r03_insecure_registries.rs  docker_r04_tcp_socket_tls.rs  docker_r05_daemon_hardening.rs  docker_r06_not_applicable_skipped.rs  docker_r07_deterministic_offline_redaction.rs  evidence_r01_real_digest.rs  evidence_r02_persistence.rs  local_db_r01_failed_packaged_migration.rs  local_db_r01_no_cloud_config.rs  local_db_r01_open_missing_database.rs  local_db_r01_packaged_migrations.rs  local_db_r02_destructive_migration.rs  local_db_r02_newer_schema_no_downgrade.rs  local_db_r02_pending_migration.rs  local_db_r02_reopen_existing_database.rs  local_db_r03_incomplete_corpus.rs  local_db_r03_score_summaries.rs  local_db_r03_write_completed_corpus.rs  local_db_r04_concurrent_writes_converge.rs  local_db_r04_idempotent_corpus_writes.rs  local_db_r04_repeated_write_no_duplicate_gaps_or_scores.rs  local_db_r04_rewrite_order_stable_ids.rs  local_db_r05_evidence_by_id_digest_control.rs  local_db_r05_filters_no_leak.rs  local_db_r05_gaps_by_run_status_severity.rs  local_db_r05_results_by_run_control_status.rs  local_db_r05_results_gaps_scores_stable_order.rs  local_db_r05_runs_stable_order.rs  local_db_r05_unmatched_filters_empty.rs  local_db_r06_matching_digest.rs  local_db_r06_mismatched_digest.rs  local_db_r06_missing_linked_evidence.rs  local_db_r06_reconstruction_mismatch.rs  local_db_r07_classified_metadata.rs  local_db_r07_no_raw_classified_values.rs  local_db_r07_protected_classifications_redacted.rs  local_db_r08_export_paths.rs  local_db_r08_missing_corpus.rs  (+129 more)
tests/docker_support/: mod.rs
tests/fixtures/cis-linux/: control.yaml  mapping.yaml  rule.yaml
tests/matrix_support/: mod.rs
tests/scan_e2e_support/: mod.rs
tests/scan_support/: mod.rs
tests/signed_json_support/: mod.rs
tests/ssh_support/: mod.rs
tests/system_support/: mod.rs
tests/user_support/: mod.rs
(+2 files in other folders)
