[package]
name = "sovri-agent"
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
description = "Sovri compliance agent — air-gapped rule execution on the sovri-sdk engine."
repository = "https://github.com/Sovri/sovri-agent"
readme = "README.md"
publish = false

[lib]
name = "sovri_agent"
path = "src/lib.rs"

[[bin]]
name = "sovri-agent"
path = "src/main.rs"

[dependencies]
sovri-sdk = { git = "https://github.com/Sovri/sovri-sdk-rust", rev = "2e1e1ec86a5b03a6535d101ff090bf9d085e5a81", version = "0.1.0" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
