[package]
name = "sovri-agent"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
description = "Sovri compliance agent — air-gapped rule execution on the sovri-sdk engine."
repository = "https://github.com/Sovri/sovri-agent"
readme = "README.md"
publish = false

[lib]
name = "sovri_agent"
path = "src/lib.rs"

[[bin]]
name = "sovri-agent"
path = "src/main.rs"

[dependencies]
sovri-sdk = { git = "https://github.com/Sovri/sovri-sdk-rust", rev = "fe49d255b62890e2f4a92d7fc21bb0d9ab117a69", version = "0.2.0" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
