[package]
name = "sovri-agent"
version = "0.5.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
description = "Sovri compliance agent — air-gapped rule execution on the sovri-sdk engine."
repository = "https://github.com/Sovri/sovri-agent"
readme = "README.md"
publish = false

[lib]
name = "sovri_agent"
path = "src/lib.rs"

[[bin]]
name = "sovri-agent"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "=2.2.0"
sovri-sdk = { git = "https://github.com/Sovri/sovri-sdk-rust", rev = "7b4873814b326944b54562c121937abf454a19c2", version = "0.3.0" }

[dev-dependencies]
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
